# mars_nwe

./: .config.h.swp  CHANGES  CMakeLists.txt  INSTALL  INSTALL.ger  Makefile  NEWS  README  README.ger  README.md  config.h  connect.c  connect.h  dbmtool.c  debmask.h  emutli.c  emutli.h  emutli1.c  emutli1.h  extpipe.c  extpipe.h  ftrustee.c  ipxif.c  makefile.unx  mars_nwe.lsm  nameos2.c  nameos2.h  namspace.c  namspace.h  ncpserv.c  net.h  net1.c  net1.h  netinit.c  netn.c  nwattrib.c  nwattrib.h  nwbind.c  nwbind.h  nwclient.c  (+34 more)
cmake/modules/: FindCrypt.cmake  MarsNweInstallDirs.cmake
doc/: BUGS  BUGS.nl  CHANGES  CREDITS  FAQS  FILESHARING  FRAGEN  FRAGEN.erik  HOWTO.ger  INSTALL  INSTALL.ger  INSTALL.nl  NEWS  PIPE-FS  PIPE-FS.ger  PPP  PPP.isdn  README  README.FREEBSD  README.NLS  README.ger  TRUSTEES  VRAGEN.NL  mars_nwe.lsm
doc/old/: README.kpatch1.2.13  config.h  dosemu-patch  kpatch2.0.1  kpatch2.0.29  makefile.unx  mk  nw.ini
dosutils/: CMakeLists.txt  capture.c  kern.asm  kern.h  login.c  makefile.bcc  map.c  ncpcall.c  net.c  net.h  netcall.c  nwcrypt.c  nwcrypt.h  nwdebug.c  nwtests.c  slist.c  teste.c  tools.c
dosutils/doc/: README  mars_dosutils.lsm
examples/: README.dosemu  README.important  README.kpatch1.3.56  README.kpatch1.3.72  README.kpatch1.3.7x  README.patch  comm.c  config.h  e.pck  kpatch1.2.13  kpatch1.3.56  kpatch1.3.72  kpatch1.3.78  kpatch2.0.28  mk.li  nw.ini  nw.ini.cnv.437  nw.ini.cnv.min  nw.ini.old  nwopt  nwserv.stations  patchme  sendm.c  unxcomm.c  xsockrt.c
include/: CMakeLists.txt  config.h.cmake  emutli.h  extpipe.h  nameos2.h  namspace.h  net.h  net1.h  nwattrib.h  nwdbm.h  nwfile.h  nwshare.h  nwvolume.h  tools.h  trustee.h
mail/: CMakeLists.txt  README  marsmail.pas  monlan  newuser.pl  nomasteruser  nph-users  ohbirthcheck  ohexiry  ohlogscr.bat  ohmail  ohmasteruser  ohmessage  ohpostme  ohquota  ohsendnt  pmail.bat  pmdflts.ini  pmgate.sys
mail/doc/: marsmail.doc  ohform.htm  wwwhomepage
opt/: CMakeLists.txt  _prn  nw.ini.cmake  nw.ini.cnv.cyr  nw.ini.cnv.pl.852-iso2  nw.ini.cnv.pl.852-none  nw.ini.cnv.pl.cp1250-iso2  nw.ini.cnv.pl.mazovia-iso2  nwserv.logrotate  prn-clr  unxsendm.c  uptime
src/: CMakeLists.txt  connect.c  dbmtool.c  emutli.c  emutli1.c  extpipe.c  ftrustee.c  nameos2.c  namspace.c  ncpserv.c  net1.c  nwattrib.c  nwbind.c  nwclient.c  nwcrypt.c  nwdbm.c  nwfile.c  nwqconn.c  nwqueue.c  nwserv.c  nwshare.c  nwvolume.c  sema.c  tools.c  trustee.c  unxfile.c  unxlog.c
sys/: CMakeLists.txt  comm.c  net$log.dat.cmake
